# atomalign

./: .gitignore  CMakeLists.txt  LICENSE  README.md  fetch-deps.sh
embedfile/: main.cpp
examples/: matrix.lua  test_align.lua  test_align_big.lua
licenses/: BSD2.txt
luainterface/: compile_time_hash.h  luainterface.h
luainterface/check/: check_if_type_has_l_fromtable.h  check_if_type_has_l_new.h  check_if_type_has_l_totable.h  check_if_type_has_luafunctions.h  check_if_type_has_luamethods.h
src/: atom.cpp  atom.h  atom_interface.cpp  atom_interface.h  atomcontainer.cpp  atomcontainer.h  atomcontainer_interface.cpp  atomcontainer_interface.h  interactive.cpp  interactive.h  interactive.lua  load_mol2.lua  main.cpp  matrix.cpp  matrix.h  matrix_interface.cpp  matrix_interface.h
